--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "ca": "^0.1.9",
     "canvasjs-react-charts": "^1.0.5",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0"
   },
   "browserslist": [
     "last 2 Chrome versions"
